<resources>
    <string name="app_name">Clock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btnAddAlarmText">Add Alarm</string>

    <string name="play_sound">Play Sound</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="lap">Lap</string>
</resources>
